# OpenHarmony

./: LICENSE  README.md
Harmony OpenArkCompiler v1.0/src/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/huawei_secure_c/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/huawei_secure_c/include/: securec.h  securectype.h
Harmony OpenArkCompiler v1.0/src/huawei_secure_c/src/: Makefile  fscanf_s.c  fwscanf_s.c  gets_s.c  input.inl  memcpy_s.c  memmove_s.c  memset_s.c  output.inl  scanf_s.c  secinput.h  securecutil.c  securecutil.h  secureinput_a.c  secureinput_w.c  secureprintoutput.h  secureprintoutput_a.c  secureprintoutput_w.c  snprintf_s.c  sprintf_s.c  sscanf_s.c  strcat_s.c  strcpy_s.c  strncat_s.c  strncpy_s.c  strtok_s.c  swprintf_s.c  swscanf_s.c  vfscanf_s.c  vfwscanf_s.c  vscanf_s.c  vsnprintf_s.c  vsprintf_s.c  vsscanf_s.c  vswprintf_s.c  vswscanf_s.c  vwscanf_s.c  wcscat_s.c  wcscpy_s.c  wcsncat_s.c  (+5 more)
Harmony OpenArkCompiler v1.0/src/maple_driver/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/maple_driver/defs/: phases.def  supported_compilers.def
Harmony OpenArkCompiler v1.0/src/maple_driver/include/: compiler.h  compiler_factory.h  compiler_selector.h  default_options.h  driver_runner.h  file_utils.h  mpl_options.h  safe_exe.h  supported_compilers.h  usages.h
Harmony OpenArkCompiler v1.0/src/maple_driver/src/: compiler.cpp  compiler_factory.cpp  compiler_selector.cpp  driver_runner.cpp  file_utils.cpp  jbc2mpl_compiler.cpp  maple.cpp  maple_comb_compiler.cpp  mpl_options.cpp  mplcg_compiler.cpp
Harmony OpenArkCompiler v1.0/src/maple_ipa/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/maple_ipa/include/: interleaved_manager.h  module_phase.h  module_phase_manager.h  module_phases.def
Harmony OpenArkCompiler v1.0/src/maple_ipa/src/: interleaved_manager.cpp  module_phase_manager.cpp
Harmony OpenArkCompiler v1.0/src/maple_ir/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/maple_ir/include/: all_attributes.def  bin_mir_file.h  bin_mpl_export.h  bin_mpl_import.h  bin_mplt.h  binary_op.def  cfg_primitive_types.h  global_tables.h  intrinsic_java.def  intrinsic_op.h  intrinsics.def  intrinsics.h  java_eh_lower.h  keywords.def  lexer.h  memory_order_attrs.def  metadata_layout.h  mir_builder.h  mir_config.h  mir_const.h  mir_function.h  mir_lower.h  mir_module.h  mir_nodes.h  mir_parser.h  mir_pragma.h  mir_preg.h  mir_symbol.h  mir_type.h  opcode_info.h  opcodes.def  opcodes.h  option.h  parser_opt.h  prim_types.def  prim_types.h  printing.h  tokens.h  types_def.h  unary_op.def
Harmony OpenArkCompiler v1.0/src/maple_ir/src/: bin_mpl_export.cpp  bin_mpl_import.cpp  global_tables.cpp  intrinsics.cpp  lexer.cpp  mir_builder.cpp  mir_const.cpp  mir_function.cpp  mir_lower.cpp  mir_module.cpp  mir_nodes.cpp  mir_parser.cpp  mir_pragma.cpp  mir_symbol.cpp  mir_type.cpp  opcode_info.cpp  option.cpp  parser.cpp  printing.cpp
Harmony OpenArkCompiler v1.0/src/maple_me/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/maple_me/include/: alias_analysis_table.h  alias_class.h  bb.h  dominance.h  func_emit.h  irmap.h  me_alias_class.h  me_bb_layout.h  me_cfg.h  me_const.h  me_dominance.h  me_emit.h  me_function.h  me_ir.h  me_irmap.h  me_option.h  me_phase.h  me_phase_manager.h  me_phases.def  me_rc_lowering.h  me_ssa.h  me_ssa_tab.h  me_ssa_update.h  orig_symbol.h  ssa.h  ssa_mir_nodes.h  ssa_tab.h  union_find.h  ver_symbol.h
Harmony OpenArkCompiler v1.0/src/maple_me/src/: alias_analysis_table.cpp  alias_class.cpp  bb.cpp  dominance.cpp  func_emit.cpp  irmap.cpp  irmap_emit.cpp  me_alias_class.cpp  me_bb_layout.cpp  me_cfg.cpp  me_dominance.cpp  me_emit.cpp  me_function.cpp  me_ir.cpp  me_irmap.cpp  me_option.cpp  me_phase_manager.cpp  me_rc_lowering.cpp  me_ssa.cpp  me_ssa_tab.cpp  me_ssa_update.cpp  orig_symbol.cpp  ssa.cpp  ssa_mir_nodes.cpp  ssa_tab.cpp  ver_symbol.cpp
Harmony OpenArkCompiler v1.0/src/maple_phase/include/: phase.h  phase_impl.h  phase_manager.h
Harmony OpenArkCompiler v1.0/src/maple_util/include/: error_code.h  factory.h  file_layout.h  itab_util.h  literal_str_name.h  mpl_logging.h  mpl_timer.h  mpl_utils.h  muid.h  name_mangler.h  option_parser.h  ptr_list_ref.h  string_utils.h  version.h
Harmony OpenArkCompiler v1.0/src/mempool/include/: maple_string.h  mempool.h  mempool_allocator.h
Harmony OpenArkCompiler v1.0/src/mpl2mpl/: BUILD.gn
Harmony OpenArkCompiler v1.0/src/mpl2mpl/include/: class_hierarchy.h  class_init.h  gen_check_cast.h  java_intrn_lowering.h  muid_replacement.h  native_stub_func.h  reflection_analysis.h  vtable_analysis.h  vtable_impl.h
Harmony OpenArkCompiler v1.0/src/mpl2mpl/src/: class_hierarchy.cpp  class_init.cpp  gen_check_cast.cpp  java_eh_lower.cpp  java_intrn_lowering.cpp  muid_replacement.cpp  native_stub_func.cpp  reflection_analysis.cpp  vtable_analysis.cpp  vtable_impl.cpp
Openharmony v1.0/drivers/liteos/: .gitignore  BUILD.gn
Openharmony v1.0/drivers/liteos/hievent/: BUILD.gn  Kconfig  Makefile
Openharmony v1.0/drivers/liteos/include/: base  hiedmac  hieth-sf  mmc  random  video
Openharmony v1.0/drivers/liteos/mem/: BUILD.gn  Kconfig  Makefile
Openharmony v1.0/drivers/liteos/random/: Kconfig  Makefile
Openharmony v1.0/drivers/liteos/tzdriver/: Kconfig  Makefile
Openharmony v1.0/drivers/liteos/video/: BUILD.gn  Kconfig  Makefile
Openharmony v1.0/foundation/graphic/lite/: .clang-format  .gitignore  BUILD.gn  CMakeLists.txt  readme.md
Openharmony v1.0/kernel/liteos_a/: .gitignore  BUILD.gn  Kconfig  Makefile  build.sh  config.mk  readme.md
Openharmony v1.0/kernel/liteos_a/apps/: Makefile  config.mk  module.mk
Openharmony v1.0/kernel/liteos_a/arch/: Kconfig  cpu.mk
Openharmony v1.0/kernel/liteos_a/bsd/: Kconfig  Makefile
Openharmony v1.0/kernel/liteos_a/kernel/: BUILD.gn  Kconfig
Openharmony v1.0/kernel/liteos_a/lib/: Kconfig
Openharmony v1.0/kernel/liteos_a/net/: Kconfig
Openharmony v1.0/kernel/liteos_a/platform/: Kconfig  Makefile  board.ld.S  bsp.mk  main.c
Openharmony v1.0/kernel/liteos_a/security/: Kconfig  Makefile
Openharmony v1.0/kernel/liteos_a/shell/: BUILD.gn  Kconfig  Makefile
(+6032 files in other folders)
