# Copyright (c) 2013-2019, Huawei Technologies Co., Ltd. All rights reserved.
# Copyright (c) 2020, Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//build/lite/config/component/lite_component.gni")

source_set("sec") {

    sources = [
        "cmsis/cmsis_liteos.c",
        "../../../third_party/bounds_checking_function/src/fscanf_s.c",
        "../../../third_party/bounds_checking_function/src/fwscanf_s.c",
        "../../../third_party/bounds_checking_function/src/gets_s.c",
        "../../../third_party/bounds_checking_function/src/memcpy_s.c",
        "../../../third_party/bounds_checking_function/src/memmove_s.c",
        "../../../third_party/bounds_checking_function/src/memset_s.c",
        "../../../third_party/bounds_checking_function/src/scanf_s.c",
        "../../../third_party/bounds_checking_function/src/securecutil.c",
        "../../../third_party/bounds_checking_function/src/secureinput_a.c",
        "../../../third_party/bounds_checking_function/src/secureinput_w.c",
        "../../../third_party/bounds_checking_function/src/secureprintoutput_a.c",
        "../../../third_party/bounds_checking_function/src/secureprintoutput_w.c",
        "../../../third_party/bounds_checking_function/src/snprintf_s.c",
        "../../../third_party/bounds_checking_function/src/sprintf_s.c",
        "../../../third_party/bounds_checking_function/src/sscanf_s.c",
        "../../../third_party/bounds_checking_function/src/strcat_s.c",
        "../../../third_party/bounds_checking_function/src/strcpy_s.c",
        "../../../third_party/bounds_checking_function/src/strncat_s.c",
        "../../../third_party/bounds_checking_function/src/strncpy_s.c",
        "../../../third_party/bounds_checking_function/src/strtok_s.c",
        "../../../third_party/bounds_checking_function/src/swprintf_s.c",
        "../../../third_party/bounds_checking_function/src/swscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vfscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vfwscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vsnprintf_s.c",
        "../../../third_party/bounds_checking_function/src/vsprintf_s.c",
        "../../../third_party/bounds_checking_function/src/vsscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vswprintf_s.c",
        "../../../third_party/bounds_checking_function/src/vswscanf_s.c",
        "../../../third_party/bounds_checking_function/src/vwscanf_s.c",
        "../../../third_party/bounds_checking_function/src/wcscat_s.c",
        "../../../third_party/bounds_checking_function/src/wcscpy_s.c",
        "../../../third_party/bounds_checking_function/src/wcsncat_s.c",
        "../../../third_party/bounds_checking_function/src/wcsncpy_s.c",
        "../../../third_party/bounds_checking_function/src/wcstok_s.c",
        "../../../third_party/bounds_checking_function/src/wmemcpy_s.c",
        "../../../third_party/bounds_checking_function/src/wmemmove_s.c",
        "../../../third_party/bounds_checking_function/src/wscanf_s.c",
    ]
}

lite_component("components") {
    features = [ 
        ":sec"
    ]

}
