 # Copyright (c) 2020 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
 #
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
import("//build/lite/config/component/lite_component.gni")    
  
lite_component("tools") {  
    features = [ ]
    if (ohos_build_type == "debug") {
       if(ohos_kernel_type == "liteos_riscv") {
           features += [
              "//test/xts/tools/hctest",
           ]
       }else if(ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
           features += [
              "//test/xts/tools/hcpptest"
           ]
       }
    }
}

generate_notice_file("tools_notice_file") {
    module_name = "tools"
    module_source_dir_list = [
        "//third_party/googletest",
        "//third_party/unity"
    ]
}
