# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("common_lite") {
    sources = [
        "hiview_config.c",
        "hiview_cache.c",
        "hiview_file.c",
        "hiview_util.c",
    ]
    cflags = [ "-Wall" ]
    include_dirs = [
        "//base/hiviewdfx/interfaces/kits/hilog_lite",
        "//base/hiviewdfx/services/hiview_lite",
        "//kernel/liteos_m/components/cmsis",
        "//vendor/hisi/hi3861/hi3861/platform/os/Huawei_LiteOS/components/lib/libc/musl/include",
        "//utils/native/lite/include",
    ]
}
