# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("app_verify_config") {
  include_dirs = [
    "include",
    "//third_party/bounds_checking_function/include",
    "//base/startup/interfaces/kits/syspara_lite",
    "//third_party/cJSON",
    "//base/security/interfaces/innerkits/app_verify",
  ]
  defines = [
    "PARSE_PEM_FORMAT_SIGNED_DATA"
  ]
  cflags = [
    "-Wall",
  ]
}

shared_library("verify") {
  sources = [
      "src/app_common.c",
      "src/app_provision.c",
      "src/app_verify.c",
      "src/mbedtls_pkcs7.c",
      "src/app_centraldirectory.c",
      "src/app_file.c",
      "src/app_verify_hap.c",
  ]
  configs += [ ":app_verify_config" ]
  public_deps = [
      "//third_party/bounds_checking_function:libsec_shared",
      "//third_party/mbedtls:mbedtls_shared",
      "//third_party/cJSON:cjson_shared",
      "//base/hiviewdfx/frameworks/hilog_lite/featured:hilog_shared",
      "//base/startup/frameworks/syspara_lite/parameter:parameter",
  ]
}
