# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

lite_component("appspawn_lite") {
    features = [
        ":appspawn",
    ]
}

# feature: appspawn
executable("appspawn") {
    sources = [
        "src/main.c",
        "src/appspawn_process.c",
        "src/appspawn_service.c",
        "src/appspawn_message.c",
        "src/appspawn_adapter.c",
    ]

    cflags = [
        "-Wall",
        "-Wno-format",
        "-Wno-format-extra-args",
    ]

    include_dirs = [
        "include",
        "//utils/native/lite/include",
        "//foundation/distributedschedule/interfaces/kits/samgr_lite/samgr",
        "//foundation/distributedschedule/interfaces/kits/samgr_lite/registry",
        "//third_party/bounds_checking_function/include/",
        "//third_party/cJSON",
    ]

    deps = [
        "//third_party/bounds_checking_function:libsec_shared",
        "//foundation/distributedschedule/services/samgr_lite/samgr:samgr",
        "//foundation/communication/frameworks/ipc_lite:liteipc_adapter",
        "//third_party/cJSON:cjson_shared",
    ]

    if (ohos_kernel_type == "liteos_a") {
        include_dirs += [
            "//kernel/liteos_a/kernel/include",
            "//kernel/liteos_a/kernel/common",
        ]
        deps += [
            "//base/hiviewdfx/frameworks/hilog_lite/featured:hilog_shared",
        ]
    }

    if (ohos_kernel_type == "linux") {
        ldflags = ["-lstdc++"]
        include_dirs += [
        ]
    }
}
